Docker PORT_Cloud

--- a/parking-dashboard/app/static/indexVue.html
+++ b/parking-dashboard/app/static/indexVue.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-100 font-sans p-6">
   <div id="app" class="max-w-7xl mx-auto space-y-10">
-    <h1 class="text-4xl font-bold text-center">Garage Dashboard</h1>
+    <h1 class="text-4xl font-bold text-center">Garage Dashboard - Vue</h1>
 
     <!-- Simulacija dugme + status -->
     <div class="text-center space-y-4">
