indexVue API_BASE port prazno

--- a/parking-dashboard/app/static/indexVue.html
+++ b/parking-dashboard/app/static/indexVue.html
@@ -67,7 +67,7 @@
 
   <script>
     //const API_BASE = 'http://127.0.0.1:8000';
-    const API_BASE = 'https://parkingapipythondocker.onrender.com';
+    const API_BASE = '';
 
     const app = Vue.createApp({
       data() {
