simulate_apict terminal

--- a/parking-dashboard/app/static/dashboard.html
+++ b/parking-dashboard/app/static/dashboard.html
@@ -52,7 +52,7 @@
   </style>
 </head>
 <body>
-  <h1 style="text-align:center; font-size:32px; font-weight:700;">Garage Dashboard - VUE</h1>
+  <h1 style="text-align:center; font-size:32px; font-weight:700;">Garage Dashboard</h1>
 
   <button onclick="runSimulation()">🔄 Simulate Entry/Exit</button>
   <div id="statusMessage"></div>
